boulder/boulder/tests/compile_fail/module/try_from_outer.bo
# Cannot find type `A` in this scope
# (8:

mod inner {
    struct A;
}

fn test(a: A) -> A {
    a
}